# transacoes_bancarias

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  deploy_tutorial.md  implementation_plan.md  main.py  pyproject.toml  uvicorn_logging_config.json
.github/worflows/: docker-build.yml
.github/workflows/: docker-build-deploy.yml
business_contexts/: main.py
business_contexts/domain/: exceptions.py
business_contexts/domain/aggregates/: bank_account.py  bank_transaction.py  client.py  user.py
business_contexts/domain/entities/: client.py  (+4 more)
business_contexts/utils/: base_types.py  constants.py
contextos_de_negocios/: main.py
contextos_de_negocios/cliente/: controllers.py  exceptions.py  models.py  repositorio.py  routes.py  schemas.py
contextos_de_negocios/conta_bancaria/: agregado.py  controllers.py  exceptions.py  models.py  repositorio.py  routes.py  schemas.py
contextos_de_negocios/dominio/: exceptions.py
contextos_de_negocios/servicos/: controllers.py  exceptions.py  routes.py
contextos_de_negocios/transacao_bancaria/: controllers.py  exceptions.py  executores.py  repositorio.py  routes.py  schemas.py
contextos_de_negocios/usuario/: controllers.py  exceptions.py  models.py  repositorio.py  routes.py  schemas.py
contextos_de_negocios/utils/: constantes.py  tipos_basicos.py
infra/: Dockerfile  __init__.py  banco_de_dados.py  concorrencia.py  database.py  docker-compose.test.yml  docker-compose.yml  requirements.txt  secrets.json
testes/: __init__.py  conftest.py  mocks.py  test_api_clientes.py  test_api_contas.py  test_api_transacoes_e_concorrencia.py  test_api_usuarios.py  test_banco_de_dados.py  teste_banco_de_dados.py  testes_api_usuarios.py
tests/: conftest.py  mocks.py
tests/integration/: test_api_accounts.py  test_api_clients.py  test_api_security.py  test_api_transactions.py  test_api_users.py
tests/unit/: test_aggregates.py  test_base_types.py  test_value_objects.py
(+71 files in other folders)
