[project]
name = "transacoes-bancarias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.0",
    "fastapi[all]>=0.124.0",
    "greenlet>=3.3.0",
    "pyjwt==2.9.0",
    "pytz>=2025.2",
    "ruff>=0.14.8",
    "sqlalchemy>=2.0.45",
    "validate-docbr>=1.11.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
