[project]
name = "transacoes-bancarias"
version = "0.2.0"
description = "API REST de transações bancárias com DDD, FastAPI e SQLAlchemy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=4.2.0",
    "fastapi[all]>=0.115.0",
    "greenlet>=3.3.0",
    "pyjwt>=2.10.0",
    "pytz>=2025.2",
    "ruff>=0.14.8",
    "sentry-sdk[fastapi]>=2.19.0",
    "sqlalchemy>=2.0.36",
    "validate-docbr>=1.11.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
